PP-15127: simple IDE inspection fixes